apps/vimbin/networkpolicies/traefik-egress-vimbin.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: traefik-egress-vimbin
  namespace: traefik
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: traefik-traefik
      app.kubernetes.io/name: traefik
  egress:
    - toEndpoints:
        - matchLabels:
            app: vimbin
            io.kubernetes.pod.namespace: vimbin
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
